# zendo

./: .gitignore  CLAUDE.md  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml  release.yml
docs/design/: i18n.md
docs/terminal-setup/: README.md  setup.sh
docs/terminal-setup/brew/: Brewfile
docs/terminal-setup/configs/: cargo-config.toml  gitconfig  p10k.zsh  zprofile  zshrc
docs/terminal-setup/fonts/: install.sh
docs/terminal-setup/iterm/: catppuccin-frappe.itermcolors
scripts/: sync-upstream.sh
src/: App.css  App.tsx  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  telemetry.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/backup/: commands.rs  mod.rs
src-tauri/src/db/: commands.rs  mod.rs
src-tauri/src/editors/: mod.rs
src-tauri/src/import/: commands.rs  mod.rs
src-tauri/src/local/: commands.rs  manager.rs  mod.rs  session.rs
src-tauri/src/portforward/: commands.rs  manager.rs  mod.rs
src-tauri/src/s3/: commands.rs  mod.rs  transfer_manager.rs
src-tauri/src/scp/: commands.rs  exec.rs  listing.rs  mod.rs  transfer.rs  transfer_manager.rs  wire.rs
src-tauri/src/sftp/: commands.rs  mod.rs  transfer_manager.rs
src-tauri/src/ssh/: commands.rs  handler.rs  keys.rs  manager.rs  mod.rs  session.rs
src-tauri/src/transfer/: commands.rs  mod.rs
src-tauri/src/types/: error.rs  events.rs  mod.rs  session.rs
src-tauri/src/vault/: mod.rs
src/components/dashboard/: ConnectionDialog.tsx  GroupCard.tsx  GroupDeleteDialog.tsx  GroupModal.tsx  HostCard.tsx  HostEditModal.tsx  HostsDashboard.tsx  ImportSshConfigModal.tsx  NewHostPopup.tsx  S3Card.tsx  SortableCard.tsx  TunnelSection.tsx  index.ts
src/components/explorer/: ExplorerDropZone.tsx  ExplorerFileTable.doubleclick.test.tsx  ExplorerFileTable.tsx  ExplorerToolbar.tsx  FilePropertiesDialog.test.tsx  (+2 more)
src/hooks/: use-debounce.ts  use-keyboard-shortcuts.ts  use-port-forward-events.ts  use-resize-handle.ts  use-sftp-transfers.ts  use-ssh-events.ts  use-ssh-status.ts
src/i18n/: index.ts  settings.ts  types.ts
src/lib/: drop-conflicts.test.ts  drop-conflicts.ts  editor-errors.test.ts  editor-errors.ts  explorer-transport.test.ts  explorer-transport.ts  file-types.test.ts  file-types.ts  layout.ts  permissions.test.ts  permissions.ts
src/providers/: local-provider.test.ts  local-provider.ts  s3-provider.ts  sftp-provider.ts
src/stores/: groups-store.test.ts  groups-store.ts  health-store.ts  hosts-store.test.ts  hosts-store.ts  pinned-sync.test.ts  pinned-sync.ts  port-forward-store.ts  s3-store.test.ts  s3-store.ts  session-store.test.ts  session-store.ts  settings-store.test.ts  settings-store.ts  sftp-store.ts  tab-store.test.ts  tab-store.ts  terminal-instances.test.ts  terminal-instances.ts  terminal-registry.ts  terminal-search-store.ts  toast-store.ts  transfer-store.ts  ui-store.ts  updater-store.ts
src/types/: explorer.ts  index.ts  layout.ts  local.ts  port-forwarding.ts  s3.ts  sftp.ts  ssh.ts
src/utils/: format.ts  time.ts
tests/bastion-server/: Dockerfile  enable-tcp-forwarding.sh
tests/e2e/: .dockerignore  .gitignore  .npmrc  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.yml  entrypoint.sh  package.json  tsconfig.json  wdio.conf.ts
tests/scp-server/: .gitignore  Dockerfile  disable-sftp.sh
tests/scp-server-busybox/: Dockerfile
tests/scp-server-busybox-nostat/: Dockerfile
tests/sudo-server/: Dockerfile  enable-nopasswd-sudo.sh
(+133 files in other folders)
